tests/paczka1/fuzzy1/84494886.err
Error in line 2: 8NA4mXoGQWA S470 19,0
Error in line 6: A973 A973 53,0
Error in line 24: 9D1GqgqGS6U A313 95,7
